test: 테스트 코드 업데이트
- 변경된 도메인, 어댑터, 서비스, 인프라스트럭처에 맞춰 테스트 코드 업데이트