@@ -2,9 +2,16 @@ package com.cotalk.application.service.chatroom;
 
 import com.cotalk.domain.entity.ChatRoom;
 import com.cotalk.domain.entity.ChatRoomMember;
+import com.cotalk.domain.entity.Message;
+import com.cotalk.domain.entity.User;
 import com.cotalk.domain.exception.ChatRoomAccessDeniedException;
+import com.cotalk.domain.port.outbound.ChatMessageBroker;
 import com.cotalk.domain.port.outbound.ChatRoomMemberRepository;
 import com.cotalk.domain.port.outbound.ChatRoomRepository;
+import com.cotalk.domain.port.outbound.IdGenerator;
+import com.cotalk.domain.port.outbound.MessageRepository;
+import com.cotalk.domain.port.outbound.UserEventBroker;
+import com.cotalk.domain.port.outbound.UserRepository;
 import com.cotalk.infrastructure.lock.DistributedLockExecutor;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -13,7 +20,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.lang.reflect.Field;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -36,11 +44,35 @@ class LeaveChatRoomServiceTest {
     @Mock
     private DistributedLockExecutor lockExecutor;
 
+    @Mock
+    private IdGenerator idGenerator;
+
+    @Mock
+    private MessageRepository messageRepository;
+
+    @Mock
+    private UserRepository userRepository;
+
+    @Mock
+    private ChatMessageBroker chatMessageBroker;
+
+    @Mock
+    private UserEventBroker userEventBroker;
+
     private LeaveChatRoomService service;
 
     @BeforeEach
     void setUp() {
-        service = new LeaveChatRoomService(chatRoomMemberRepository, chatRoomRepository, lockExecutor);
+        service = new LeaveChatRoomService(
+                chatRoomMemberRepository,
+                chatRoomRepository,
+                lockExecutor,
+                idGenerator,
+                messageRepository,
+                userRepository,
+                chatMessageBroker,
+                userEventBroker
+        );
 
         // 분산락 모킹: 락 획득 후 바로 실행
         doAnswer(invocation -> {
@@ -63,8 +95,15 @@ class LeaveChatRoomServiceTest {
                 .userId(userId)
                 .build();
 
+        User leavingUser = User.builder()
+                .id(userId)
+                .nickname("테스트유저")
+                .build();
+
         given(chatRoomMemberRepository.findByChatRoomIdAndUserId(chatRoomId, userId))
                 .willReturn(Optional.of(member));
+        given(userRepository.findById(userId))
+                .willReturn(Optional.of(leavingUser));
 
         // 다른 멤버가 존재하는 경우
         ChatRoomMember otherMember = ChatRoomMember.builder()
@@ -74,13 +113,28 @@ class LeaveChatRoomServiceTest {
                 .build();
 
         given(chatRoomMemberRepository.findByChatRoomId(chatRoomId))
-                .willReturn(Arrays.asList(member, otherMember));
+                .willReturn(List.of(otherMember));
+
+        // 시스템 메시지 생성을 위한 mock
+        given(idGenerator.nextId()).willReturn(1000L);
+
+        Message systemMessage = Message.builder()
+                .id(1000L)
+                .chatRoomId(chatRoomId)
+                .senderId(0L)
+                .content("테스트유저님이 나갔습니다")
+                .type(Message.MessageType.SYSTEM)
+                .build();
+        setCreatedAt(systemMessage, LocalDateTime.now());
+        given(messageRepository.save(any(Message.class))).willReturn(systemMessage);
 
         // when
         service.leaveChatRoom(chatRoomId, userId);
 
         // then
         verify(chatRoomMemberRepository).delete(member);
+        verify(messageRepository).save(any(Message.class));
+        verify(chatMessageBroker).publish(any(), any());
     }
 
     @Test
@@ -158,5 +212,21 @@ class LeaveChatRoomServiceTest {
         // then
         verify(chatRoomMemberRepository).delete(member);
         // 채팅방이 없으므로 delete 호출되지 않음
+    }
+
+    /**
+     * 리플렉션을 사용하여 BaseEntity의 createdAt 필드를 설정한다.
+     *
+     * @param entity 대상 엔티티
+     * @param createdAt 설정할 시간
+     */
+    private void setCreatedAt(Object entity, LocalDateTime createdAt) {
+        try {
+            Field field = entity.getClass().getSuperclass().getDeclaredField("createdAt");
+            field.setAccessible(true);
+            field.set(entity, createdAt);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to set createdAt", e);
+        }
     }
 }
